# coding_agent_session_search

./: .gitignore  AGENTS.md  Cargo.toml  PLAN_FOR_ADVANCED_OPTIMIZATIONS_ROUND_1__GPT.md  PLAN_FOR_ADVANCED_OPTIMIZATIONS_ROUND_1__OPUS.md  README.md  RUST_CLI_TOOLS_BEST_PRACTICES_GUIDE.md  SUGGESTED_IMPROVEMENTS_TO_CASS_BASED_ON_CMS.md  TESTING.md  build.rs  install.ps1  install.sh
.agent-mail/RedRiver/outbox/: to_team_fwr_complete.md  to_team_h2b.md  to_team_ke5_complete.md
.agent-mail/WhiteCreek/inbox/: from_RedRiver_claiming_012.md
.beads/: issues.jsonl  last-touched  metadata.json  sync_base.jsonl
.github/workflows/: bench.yml  ci.yml  coverage.yml  dist.yml  fuzz.yml  install-test.yml  release.yml
benches/: search_perf.rs
docs/: COVERAGE_POLICY.md  ERROR_CODES.md  tui_keymap_rfc.md  tui_style_spec.md
packaging/homebrew/: coding-agent-search.rb
scripts/: import-chatgpt-export.py  import-chatgpt-export.sh  validate-e2e-jsonl.sh  validate_ci.sh
scripts/bakeoff/: cass_validation_e2e.sh
scripts/lib/: e2e_log.sh
scripts/tests/: run_all.sh
src/: bakeoff.rs  bookmarks.rs  encryption.rs  lib.rs  update_check.rs
src/config/: mod.rs
src/connectors/: aider.rs  amp.rs  chatgpt.rs  claude_code.rs  clawdbot.rs  cline.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs  pi_agent.rs  vibe.rs
src/daemon/: client.rs  core.rs  mod.rs  protocol.rs  resource.rs
src/html_export/: encryption.rs  mod.rs  renderer.rs  scripts.rs  styles.rs
src/indexer/: mod.rs
src/model/: types.rs
src/pages/: bundle.rs  config_input.rs  deploy_cloudflare.rs  deploy_github.rs  encrypt.rs  export.rs  fts.rs  key_management.rs  mod.rs  preview.rs  qr.rs  redact.rs  secret_scan.rs  verify.rs  wizard.rs
src/pages_assets/: database.js  index.html  search.js  session.js  sw-register.js  sw.js
src/search/: ann_index.rs  canonicalize.rs  embedder_registry.rs  mod.rs  model_manager.rs  query.rs  reranker_registry.rs  tantivy.rs  two_tier_search.rs  vector_index.rs
src/sources/: install.rs  interactive.rs  mod.rs  probe.rs  provenance.rs  setup.rs  sync.rs
src/storage/: sqlite.rs
src/ui/: data.rs  mod.rs  shortcuts.rs  tui.rs
src/ui/components/: theme.rs  widgets.rs
test-results/: no_mock_allowlist.json  no_mock_audit.md
tests/: bakeoff_harness.rs  cli_robot.rs  connector_aider.rs  connector_amp.rs  connector_claude.rs  connector_cline.rs  connector_codex.rs  connector_gemini.rs  connector_opencode.rs  connector_pi_agent.rs  crypto_vectors.rs  deploy_cloudflare.rs  deploy_github.rs  e2e_cli_flows.rs  e2e_error_recovery.rs  e2e_filters.rs  e2e_index_tui.rs  e2e_install_easy.rs  e2e_jsonl_schema_test.rs  e2e_large_dataset.rs  e2e_multi_connector.rs  e2e_pages.rs  e2e_search_index.rs  e2e_semantic_search.rs  e2e_sources.rs  e2e_ssh_sources.rs  e2e_two_tier_search.rs  fixture_helpers.rs  fs_errors.rs  html_export_e2e.rs  install_scripts.rs  multi_source_integration.rs  pages_bundle.rs  pages_export.rs  pages_master_e2e.rs  pages_pipeline_e2e.rs  pages_wizard.rs  parse_errors.rs  perf_e2e.rs  playwright.config.ts  (+16 more)
tests/docker/: Dockerfile.sshd  entrypoint.sh
tests/e2e/reporters/: jsonl-reporter.ts
tests/fixtures/aider/: .aider.chat.history.md
tests/fixtures/cli_contract/: introspect.json
tests/fixtures/connectors/: MANIFEST.json
tests/fixtures/models/: README.md  config.json  model.onnx.placeholder  tokenizer_config.json
tests/fixtures/sources/probe/: README.md  empty_index_host.json  indexed_host.json  no_cass_host.json  not_indexed_host.json  unknown_status_host.json  unreachable_host.json
tests/util/: e2e_log.rs  mod.rs
