[package]
name = "coding-agent-search"
version = "0.1.0"
edition = "2024"
authors = ["Coding Agent Team"]
description = "Unified TUI search over local coding agent histories"
license = "MIT OR Apache-2.0"
resolver = "2"
repository = "https://github.com/Dicklesworthstone/coding_agent_session_search"

[dependencies]
anyhow = "*"
thiserror = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "fmt", "ansi"] }
tokio = { version = "*", features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "time", "signal"] }
clap = { version = "*", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
clap_complete = "*"
clap_mangen = "*"
indicatif = "*"
console = "*"
colored = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml = "*"
directories = "*"
which = "*"
shell-words = "*"
dotenvy = "*"
notify = "*"
rusqlite = { version = "*", features = ["bundled", "modern_sqlite"] }
tantivy = "*"
rayon = "*"
crossbeam-channel = "*"
parking_lot = "*"
reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls"] }
ratatui = { version = "*", features = ["crossterm"] }
crossterm = "*"
dirs = "*"
walkdir = "*"
base64 = "*"
chrono = "*"

[build-dependencies]
vergen = { version = "*", default-features = false, features = ["build", "cargo"] }

[dev-dependencies]
assert_cmd = "*"
predicates = "*"
tempfile = "*"
insta = { version = "*", features = ["yaml", "json"] }
criterion = "*"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"

[workspace.metadata.dist]
targets = ["x86_64-unknown-linux-gnu"]
installers = ["shell", "powershell"]
ci = ["github"]
