[package]
name = "coding-agent-search"
version = "0.1.55"
edition = "2024"
authors = ["Jeffrey Emanuel"]
description = "Unified TUI search over local coding agent histories"
license = "MIT"
resolver = "2"
repository = "https://github.com/Dicklesworthstone/coding_agent_session_search"
default-run = "cass"

[dependencies]
anyhow = "*"
thiserror = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "fmt", "ansi"] }
tokio = { version = "*", features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "time", "signal"] }
clap = { version = "*", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
clap_complete = "*"
clap_mangen = "*"
indicatif = "*"
console = "*"
colored = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml = "*"
directories = "*"
which = "*"
shell-words = "*"
dotenvy = "*"
notify = "*"
rusqlite = { version = "*", features = ["bundled", "modern_sqlite"] }
tantivy = "*"
rayon = "*"
crossbeam-channel = "*"
parking_lot = "*"
lru = "*"
reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls", "blocking"] }
ratatui = { version = "*", features = ["crossterm"] }
crossterm = "*"
dirs = "*"
walkdir = "*"
glob = "*"
base64 = "0.22"
chrono = "*"
semver = "*"
tracing-appender = "*"
strsim = "0.11.1"
once_cell = "*"
syntect = "*"
itertools = "*"
crc32fast = "*"
unicode-normalization = "*"
urlencoding = "*"
half = "*"
memmap2 = "*"
fastembed = { version = "*", default-features = false, features = ["ort-download-binaries"] }
wide = "0.7"  # Portable SIMD for P0 Opt 2: SIMD dot product

# Crypto for ChatGPT encrypted conversations
aes-gcm = "0.10"
ring = "0.17"

# SHA256 hashing for model verification
sha2 = "*"
hex = "*"

# Interactive terminal prompts for setup wizard
dialoguer = "*"

# SFTP fallback for sync when rsync is unavailable
ssh2 = "*"
argon2 = "*"
hkdf = "*"
zeroize = { version = "*", features = ["derive"] }
flate2 = "*"
rand = "*"

# macOS keychain access (optional, for ChatGPT decryption)
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11"

[build-dependencies]
vergen = { version = "*", default-features = false, features = ["build", "cargo"] }

[dev-dependencies]
assert_cmd = "*"
predicates = "*"
tempfile = "*"
insta = { version = "*", features = ["yaml", "json"] }
criterion = "*"
once_cell = "*"
serial_test = "*"
proptest = "*"
serde_yaml = "0.9.34"
rand = "*"
rand_chacha = "*"

[[bin]]
name = "cass"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"

# Optimized build with symbols for profiling (perf/flamegraphs).
# Usage: RUSTFLAGS="-C force-frame-pointers=yes" cargo build --profile profiling
[profile.profiling]
inherits = "release"
debug = true
strip = false

[workspace.metadata.dist]
targets = ["x86_64-unknown-linux-gnu"]
installers = ["shell", "powershell"]
ci = ["github"]

[[bench]]
name = "index_perf"
harness = false

[[bench]]
name = "runtime_perf"
harness = false

[[bench]]
name = "search_perf"
harness = false
