[package]
name = "coding-agent-search"
version = "0.1.62"
edition = "2024"
authors = ["Jeffrey Emanuel"]
description = "Unified TUI search over local coding agent histories"
license = "MIT"
resolver = "2"
repository = "https://github.com/Dicklesworthstone/coding_agent_session_search"
default-run = "cass"

[dependencies]
anyhow = "*"
thiserror = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "fmt", "ansi"] }
tokio = { version = "*", features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "time", "signal"] }
clap = { version = "*", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
clap_complete = "*"
clap_mangen = "*"
indicatif = "*"
console = "*"
colored = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toon_rust = { git = "https://github.com/Dicklesworthstone/toon_rust", tag = "v0.1.1" }
tempfile = "*"
rmp-serde = "*"  # MessagePack for binary metadata serialization (Opt 3.1)
toml = "*"
directories = "*"
which = "*"
shell-words = "*"
dotenvy = "*"
notify = "*"
rusqlite = { version = "*", features = ["bundled", "modern_sqlite"] }
tantivy = "*"
rayon = "*"
crossbeam-channel = "*"
parking_lot = "*"
lru = "*"
fxhash = "*"  # Fast non-cryptographic hashing for cache keys (P1 Opt 1.3)
smallvec = "*"  # Stack-allocated small vectors for hot paths (Opt 4.4)
regex = "*"
reqwest = { version = "*", default-features = false, features = ["json", "rustls", "blocking"] }
ratatui = { version = "*", features = ["crossterm"] }
crossterm = "*"
dirs = "*"
walkdir = "*"
glob = "*"
base64 = ">=0.21"
chrono = { version = "*", features = ["serde"] }
semver = "*"
tracing-appender = "*"
strsim = "*"
once_cell = "*"
syntect = "*"
itertools = "*"
crc32fast = "*"
unicode-normalization = "*"
urlencoding = "*"
half = "*"
memmap2 = "*"
fastembed = { version = "*", default-features = false, features = ["ort-download-binaries"] }
wide = "*"  # Portable SIMD for P0 Opt 2: SIMD dot product
arrayvec = "*"  # Stack-based arrays for P1 Opt 1.4: Edge N-gram optimization
bloomfilter = "*"  # Probabilistic membership testing for P2 Opt 3.3: Workspace Cache

# Crypto for ChatGPT encrypted conversations and HTML export encryption
aes-gcm = "*"
ring = "*"
pbkdf2 = "*"  # PBKDF2 key derivation for Web Crypto compatible HTML export encryption

# SHA256 hashing for model verification
sha2 = "*"
hex = "*"

# Interactive terminal prompts for setup wizard
dialoguer = "*"

# SFTP fallback for sync when rsync is unavailable
ssh2 = "*"
argon2 = "*"
hkdf = "*"
zeroize = { version = "*", features = ["derive"] }
flate2 = "*"
rand = "0.8"  # Pin to 0.8.x for rand_core 0.6.x compatibility with argon2/aes-gcm

# QR code generation (optional, for recovery secret QR codes)
qrcode = { version = "*", optional = true }
image = { version = "*", optional = true, default-features = false, features = ["png"] }

# macOS keychain access (optional, for ChatGPT decryption)
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "*"

[features]
default = ["qr", "encryption"]
qr = ["dep:qrcode", "dep:image"]
encryption = []  # Enables HTML export encryption (deps already included for ChatGPT)
backtrace = []

[build-dependencies]
vergen = { version = "*", default-features = false, features = ["build", "cargo"] }

[dev-dependencies]
assert_cmd = "*"
predicates = "*"
insta = { version = "*", features = ["yaml", "json"] }
criterion = "*"
once_cell = "*"
serial_test = "*"
proptest = "*"
serde_yaml = "*"
rand = "0.8"  # Match main dependency version
rand_chacha = "0.3"  # Compatible with rand 0.8.x

[[bin]]
name = "cass"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"

# Optimized build with symbols for profiling (perf/flamegraphs).
# Usage: RUSTFLAGS="-C force-frame-pointers=yes" cargo build --profile profiling
[profile.profiling]
inherits = "release"
debug = true
strip = false

[workspace.metadata.dist]
targets = ["x86_64-unknown-linux-gnu"]
installers = ["shell", "powershell"]
ci = ["github"]

[[bench]]
name = "index_perf"
harness = false

[[bench]]
name = "runtime_perf"
harness = false

[[bench]]
name = "search_perf"
harness = false

[[bench]]
name = "crypto_perf"
harness = false

[[bench]]
name = "db_perf"
harness = false

[[bench]]
name = "export_perf"
harness = false

[[bench]]
name = "cache_micro"
harness = false

[[bench]]
name = "regex_cache"
harness = false

[[test]]
name = "docs"
path = "tests/docs/mod.rs"

[[test]]
name = "upgrade"
path = "tests/upgrade/mod.rs"

[[test]]
name = "recovery"
path = "tests/recovery/mod.rs"
